(gallery) Fix layout issues with table view

--- a/astrobin/static/astrobin/scss/main.scss
+++ b/astrobin/static/astrobin/scss/main.scss
@@ -4426,6 +4426,7 @@ table.image-list {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 40%;
   }
 
   .published,
@@ -4435,6 +4436,7 @@ table.image-list {
 
   .views, .likes, .bookmarks, .comments {
     text-align: center;
+    width: 1rem;
   }
 }
 
